# llm-system-lifecycle

./: .env.example  .gitignore  BUILD_GUIDE.md  COMMANDS.md  MANIFEST.in  PACKAGE_README.md  PACKAGE_SUMMARY.md  PROJECT_COMPLETION.md  README.md  pyproject.toml  test_installation.py
docs/: BUILD_GUIDE.md  COMMANDS.md  DEPLOYMENT_CHECKLIST.md  PACKAGE_README.md  PACKAGE_SUMMARY.md  PROJECT_COMPLETION.md  QUICK_START_TEAMS.md  README.md  architecture.md
docs/agent_analysis/: README.md  agent_evaluation_guide.md  quick_start.md  response_quality_scorer_update.md
docs/archive/: README.md  architecture.md
docs/dataset_builder/: dataset_builder.md  dataset_builder_quick_start.md  scalable_dataset_generation.md  structured_output_update.md
scripts/: QUICK_START.md  README_MLFLOW_LIFECYCLE.md  customer_service_mlflow_agent.py  customer_service_responses_agent.py  dataset_builder_demo.py  langfuse_test.py  mlflow_agent_lifecycle.py  mlflow_dataset_example.py  mlflow_lifecycle_simple.py  rag_agent_faiss_min.py
scripts/logged_agents/: customer_service_mlflow_agent.py  customer_service_mlflow_agent_simple.py
scripts/templates/: mlflow_responses_agent_wrapper.py
src/app_agents/: agent_analysis.py  dataset_builder.py
src/app_agents/temp_mlflow_agents/: .gitignore  README.md
src/dev_agents/: customer_service_agent.py
src/mlflow_eval_tools/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py  test_customer_service_agent_smoke.py  test_dataset_builder_agent_smoke.py
