[tool.poetry]
name = "llm-system-lifecycle"
version = "0.1.0"
description = ""
authors = ["Sean Deery <sdeery14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
mlflow = "^3.4.0"
pydantic = "^2.11.10"
openai-agents = "^0.3.3"
faiss-cpu = "^1.12.0"
sentence-transformers = "^5.1.2"
numpy = "^2.3.4"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
